--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Upload file to bucket
         uses: zdurham/s3-upload-github-action@master
-        with:
-          args: --acl public-read
+        # with:
+        #   args: --acl public-read
         env:
           FILE: ./lambda_handler.py
           AWS_REGION: 'us-east-1'
