--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,6 @@ jobs:
 
       - name: Upload file to bucket
         uses: zdurham/s3-upload-github-action@master
-        # with:
-        #   args: --acl public-read
         env:
           FILE: ./lambda_handler.py
           AWS_REGION: 'us-east-1'
@@ -31,6 +29,19 @@ jobs:
           S3_KEY:  lambda_handler.py
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+
+      - name: CodeGuru Reviewer
+        uses: aws-actions/codeguru-reviewer@v1.1
+        # with:
+        #   build_path: target # build artifact(s) directory
+          s3_bucket:  gh-actions-sandbox
+
+      # Step 3: Upload results into GitHub
+      - name: Upload review result
+        if: ${{ github.event_name != 'push' }}
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: codeguru-results.sarif.json
 
 
       # - name: Checkout repository
