--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: CodeGuru Reviewer
         uses: aws-actions/codeguru-reviewer@v1.1
-        # with:
+        with:
         #   build_path: target # build artifact(s) directory
           s3_bucket:  gh-actions-sandbox
 
