--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,35 +19,24 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
 
+     
+  security_checks:
+    runs-on: ubuntu-latest
+    name: Execute the pycharm-security action
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run PyCharm Security
+        uses: tonybaloney/pycharm-security@master
 
-      - name: Upload file to bucket
-        uses: zdurham/s3-upload-github-action@master
-        env:
-          FILE: ./lambda_handler.py
-          AWS_REGION: 'us-east-1'
-          S3_BUCKET: codeguru-reviewer-sandbox	
-          S3_KEY:  lambda_handler.py
-          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
-
-      - name: CodeGuru Reviewer
-        uses: aws-actions/codeguru-reviewer@v1.1
-        with:
-          fetch-depth: 0 # This is a required field for CodeGuru
-          s3_bucket: codeguru-reviewer-sandbox	
-
-      # Step 3: Upload results into GitHub
-      - name: Upload review result
-        if: ${{ github.event_name != 'push' }}
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          sarif_file: codeguru-results.sarif.json
-
-
-      # - name: Checkout repository
-      #   uses: actions/checkout@v2
-      #   with:
-      #     fetch-depth: 0 # This is a required field for CodeGuru
+#  - name: Upload file to bucket
+#         uses: zdurham/s3-upload-github-action@master
+#         env:
+#           FILE: ./lambda_handler.py
+#           AWS_REGION: 'us-east-1'
+#           S3_BUCKET: codeguru-reviewer-sandbox	
+#           S3_KEY:  lambda_handler.py
+#           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY }}
+#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
 
 
    
