--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,15 @@ on:
       - main
 
 jobs:
+  
+  security_checks:
+    runs-on: ubuntu-latest
+    name: Execute the pycharm-security action
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run PyCharm Security
+        uses: tonybaloney/pycharm-security@master
+      
   deployLambdaFunction:
     name: 'Terraform'
     runs-on: ubuntu-latest
@@ -19,29 +28,23 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
 
-     
-  security_checks:
-    runs-on: ubuntu-latest
-    name: Execute the pycharm-security action
-    steps:
-      - uses: actions/checkout@v1
-      - name: Run PyCharm Security
-        uses: tonybaloney/pycharm-security@master
+      - name: Terraform Init
+        id: init 
+        run: terraform init --upgrade
+
+      - name: Terraform Fmt 
+        id: format
+        run: terraform fmt
+
+      - name: Terraform Apply
+        id: deploy
+        run: terraform destroy --auto-approve
+
+
 
    
 
-      # - name: Terraform Init
-      #   id: init 
-      #   run: terraform init --upgrade
-
-      # - name: Terraform Fmt 
-      #   id: format
-      #   run: terraform fmt
-
-      # - name: Terraform Apply
-      #   id: deploy
-      #   run: terraform destroy --auto-approve
-
+ 
         # eksctl delete nodegroup --cluster=elliotteks --name=elliotts-eks-workernodes --disable-eviction
 
    
