deploying lambda function

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Terraform Apply
         id: deploy
-        run: terraform destroy --auto-approve
+        run: terraform apply --auto-approve
 
 
 
